--- a/index.html
+++ b/index.html
@@ -8,104 +8,125 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>TrainDocument</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>   
-    <nav>
-        <a class="logo-header" href="/">Web<span>Studio</span></a>
-        <ul class="site-nav list">
-            <li><a href="./index.html" class="current">Студія</a></li>
-            <li><a href="./portfolio.html">Портфоліо</a></li>
-            <li><a href="#">Контакти</a></li>
-        </ul>
-    </nav>
-        <ul class="site-info list">
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-        </ul> 
+    <header class="page-header">
+        <div class="container">
+            <nav>
+                <a class="logo-header" href="/">Web<span>Studio</span></a>
+                <ul class="site-nav list">
+                    <li><a href="./index.html" class="current">Студія</a></li>
+                    <li><a href="./portfolio.html">Портфоліо</a></li>
+                    <li><a href="#">Контакти</a></li>
+                </ul>
+                <ul class="site-info list">
+                    <li>
+                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </nav>
+
+        </div>    
     </header>
     <main>
         <section class="hero">
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
+            <div class="container">
+                <h1 class="hero-logo">Ефективні рішення для вашого бізнесу</h1>
+                <button type="button" class="hero-button">Замовити послугу</button>
+            </div>
         </section>
         <section class="softskills">
-            <h2 class="visually-hidden">Наші особлиості</h2>
-            <ul class="skills list">
-                <li>
-                    <h3>Увага до деталей</h3>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-                </li>
-                <li>
-                    <h3>Пунктуальність</h3>
-                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-                </li>
-                <li>
-                    <h3>Планування</h3>
-                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-                </li>
-                <li>
-                    <h3>Сучасні технології</h3>
-                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="visually-hidden">Наші особлиості</h2>
+                <ul class="skills list">
+                    <li>
+                        <h3>Увага до деталей</h3>
+                        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    </li>
+                    <li>
+                        <h3>Пунктуальність</h3>
+                        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    </li>
+                    <li>
+                        <h3>Планування</h3>
+                        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    </li>
+                    <li>
+                        <h3>Сучасні технології</h3>
+                        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="about">
-            <h2>Чим ми займаємося</h2>
-            <ul class="list">
-                <li><img src="./images/about1.jpg" alt="work" width="370" /></li>
-                <li><img src="./images/about2.jpg" alt="more-work" width="370" /></li>
-                <li><img src="./images/about3.jpg" alt="hard-work" width="370" /></li>
-            </ul>          
+            <div class="container">
+                <h2>Чим ми займаємося</h2>
+                <ul class="about-photo list">
+                    <li><img src="./images/about1.jpg" alt="work" width="370" /></li>
+                    <li><img src="./images/about2.jpg" alt="more-work" width="370" /></li>
+                    <li><img src="./images/about3.jpg" alt="hard-work" width="370" /></li>
+                </ul> 
+            </div>         
         </section>
         <section class="team">
-            <h2 class="ourteam">Наша команда</h2>
-            <ul class="teamlist list">
-                <li class="teammate-igor">   
-                    <img src="./images/team-igor.jpg" alt="igor" width="270" />
-                    <h3>Ігор Дем'яненко</h3>  
-                    <p>Product Designer</p>      
-                </li>
-                <li class="teammate-olga">
-                    <img src="./images/team-olga.jpg" alt="olga" width="270" />
-                    <h3>Ольга Рєпіна</h3> 
-                    <p>Frontend Developer</p>              
-                </li>
-                <li class="teammate-mukola">
-                    <img src="./images/team-mukola.jpg" alt="mukola" width="270" />
-                    <h3>Микола Тарасов</h3>
-                    <p>Marketing</p>                        
-                </li>
-                <li class="teammate-mukhailo">
-                    <img src="./images/team-mukhailo.jpg" alt="mikhailo" width="270" />
-                    <h3>Михайло Єрмаков</h3> 
-                    <p>UI Designer</p> 
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="ourteam">Наша команда</h2>
+                <ul class="teamlist list">
+                    <li class="teammate">   
+                        <img src="./images/team-igor.jpg" alt="igor" width="270" />
+                        <div class="teammate-info">
+                            <h3>Ігор Дем'яненко</h3>  
+                            <p>Product Designer</p>
+                        </div>      
+                    </li>
+                    <li class="teammate">
+                        <img src="./images/team-olga.jpg" alt="olga" width="270" />
+                        <div class="teammate-info">
+                            <h3>Ольга Рєпіна</h3> 
+                            <p>Frontend Developer</p>
+                        </div>                                    
+                    </li>
+                    <li class="teammate">
+                        <img src="./images/team-mukola.jpg" alt="mukola" width="270" />
+                        <div class="teammate-info">
+                            <h3>Микола Тарасов</h3>
+                            <p>Marketing</p>
+                        </div>                        
+                    </li>
+                    <li class="teammate">
+                        <img src="./images/team-mukhailo.jpg" alt="mikhailo" width="270" />
+                        <div class="teammate-info">
+                            <h3>Михайло Єрмаков</h3> 
+                            <p>UI Designer</p>
+                        </div> 
+                    </li>
+                </ul>
+            </div>
         </section>
 
     </main>
     <footer>
-        <a class="logo-footer" href="/">Web<span>Studio</span></a>
-        <address>
-            <ul class="footer-info list">
-                <li>
-                    <a class="site_adress"
-                    href="https://goo.gl/maps/q8szckF4ap9dP3nEA"
-                    target="_blank"
-                    rel="noopener noreferrer nofollow"
-                    >м. Київ, пр-т Лесі Українки, 26</a>   
-                </li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>            
-        </address>
-
+        <div class="container">
+            <a class="logo-footer" href="/">Web<span>Studio</span></a>
+            <address>
+                <ul class="footer-info list">
+                    <li>
+                        <a class="site_adress"
+                        href="https://goo.gl/maps/q8szckF4ap9dP3nEA"
+                        target="_blank"
+                        rel="noopener noreferrer nofollow"
+                        >м. Київ, пр-т Лесі Українки, 26</a>   
+                    </li>
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>            
+            </address>
+        </div>
     </footer>
 </body>
 </html>
