--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </section>
         <section class="about">
             <div class="container">
-                <h2>Чим ми займаємося</h2>
+                <h2 class="about-name">Чим ми займаємося</h2>
                 <ul class="about-photo list">
                     <li><img src="./images/about1.jpg" alt="work" width="370" /></li>
                     <li><img src="./images/about2.jpg" alt="more-work" width="370" /></li>
