--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </ul>
             </div>
         </section>
-        <section class="about">
+        <section class="about section">
             <div class="container">
                 <h2 class="about-name">Чим ми займаємося</h2>
                 <ul class="about-photo list">
@@ -73,7 +73,7 @@
                 </ul> 
             </div>         
         </section>
-        <section class="team">
+        <section class="team section">
             <div class="container">
                 <h2 class="ourteam">Наша команда</h2>
                 <ul class="teamlist list">
