--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
     </header>
     <main>
         
-        <section class="projects">
+        <section class="projects section">
             <div class="container">
                 <h1 class="visually-hidden">Портфолио</h1>
                 <ul class="portfolio-button list">
